Closed Bug 1804750 Opened 1 year ago Closed 1 year ago

layout/generic/crashtests/398322-2.html causes assert with CSS named pages enabled

Categories

(Core :: CSS Parsing and Computation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox109 --- fixed

People

(Reporter: alaskanemily, Assigned: alaskanemily)

References

Details

Attachments

(1 file)

This is because we do not properly track page name for column set wrapper frames.

Blocks: 1723234, 1787947
Assignee: nobody → emcdonough
Status: NEW → ASSIGNED
Pushed by emcdonough@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9370cb272df6
Track page name when constructing column set wrapper frames r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: