Bug 1804750 - Track page name when constructing column set wrapper frames r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D164258