layout/base/nsCSSFrameConstructor.cpp
@@ -10746,6 +10746,7 @@ nsBlockFrame* nsCSSFrameConstructor::BeginBuildingColumns(
     columnSetWrapper->AddStateBits(NS_FRAME_HAS_MULTI_COLUMN_ANCESTOR);
   }
 
+  AutoFrameConstructionPageName pageNameTracker(aState, columnSetWrapper);
   RefPtr<ComputedStyle> columnSetStyle =
       mPresShell->StyleSet()->ResolveInheritingAnonymousBoxStyle(
           PseudoStyleType::columnSet, aComputedStyle);
